--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ setup_requires = setuptools_scm
 install_requires =
     click
     matplotlib
+    pillow
 
 [options.entry_points]
 console_scripts =
